# alura-ia

./: .gitignore  README.md  main.py  pyproject.toml
00-factory-service/: .env-example
01-crie-a-sua-primeira-aplicacao/: main.py  pyproject.toml
02-python-para-dados-primeiros-passos/: main.py  pyproject.toml
03-python-para-dados-trabalhando-com-funcoes/: main.py  pyproject.toml
04-python-collections-pt-1/: main.py  pyproject.toml
05-python-collections-pt-2/: main.py  pyproject.toml
06-python-aplicando-boas-praticas-pep-8/: main.py  pyproject.toml
07-principios-solid-com-python/: main.py  pyproject.toml
08-python-construindo-sistemas-eficientes-solid-design-patterns/: main.py  pyproject.toml
09-data-driven-transformacao-organizacional-foco-dados/: main.py  pyproject.toml
10-modelagem-data-warehouse-atributos-hierarquia-indicadores/: main.py  pyproject.toml
11-data-visualization-graficos-bibliotecas-python/: main.py  pyproject.toml
11-python-ias-produtividade-data-science/: main.py  pyproject.toml
12-pandas-conhecendo-biblioteca/: main.py  pyproject.toml
13-python-ias-produtividade-data-science/: main.py
14-ia-aplicada-data-science-ia-construcao-visualizacao-dados/: main.py  pyproject.toml
15-data-science-testando-hipoteses/: atendimento-suporte.py  main.py  pyproject.toml
16-data-science-testando-relacoes-regressao-linear/: main.py  pyproject.toml
17-engenharia-software-principios-basicos/: main.py  pyproject.toml
18-regressao-sklearn-desenvolvimento-previsao-otimizacao/: main.py  pyproject.toml
19-spark-pyspark-processamento-modelagem/: main.py  pyproject.toml
20-deep-learning-introducao-com-keras/: final_test.py  main.py  modelo_fashion_mnist.keras  modelo_roupas.h5  pyproject.toml
21-introducao-a-nlp-com-analise-de-sentimento/: main.py  pyproject.toml
23-pytorch-transformers/: pyproject.toml
24-engenharia-prompt-criando-prompts-eficazes-ia-generativa/: main.py  pyproject.toml
25-python-gemini-crie-chatbot-ia-generativa/: .env copy  app.py  gerenciar_imagem.py  pyproject.toml  selecionar_persona.py
26-python-gemini-orquestrando-llms-langchain/: agent_orchestrator.py  factory.py  image_analyzing_tool.py  image_info.py  langchain_service.py  llm_chain.py  main.py  prompt_main.py  pyproject.toml
26-python-gemini-orquestrando-llms-langchain/langchain/: llm_chain_json_response.py
27-langchain-python-criando-ferramentas-openai/: main.py  main_langgraph.py  main_rag.py  pyproject.toml
28-langchain-desenvolva-agentes-inteligencia-artificial/: agente.py  main.py  (+6 more)
49-nlp-aplicando-processamento-linguagem-natural-analise-sentimentos/: main.py  pyproject.toml
49-nlp-aplicando-processamento-linguagem-natural-analise-sentimentos/pkl/: vetorizador_sentimentos.pkl
(+35 files in other folders)
