[project]
name = "25-python-gemini-crie-chatbot-ia-generativa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "flask==3.0.3",
    "langchain>=1.2.15",
    "langchain-core>=1.3.0",
    "langchain-openai>=0.3.0",
    "numpy==2.1.2",
    "openai>=2.32.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
]
