[project]
name = "26-python-gemini-orquestrando-llms-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.2",
    "langchain-openai>=1.2.0",
    "langchain-prompty>=1.0.0",
    "openai>=2.32.0",
    "python-dotenv>=1.2.2",
]
