[project]
name = "26-python-gemini-orquestrando-llms-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=0.3.0",
    "langchainhub>=0.1.21",
    "pillow>=12.2.0",
    "pydantic>=2.13.3",
]
