[project]
name = "49-nlp-aplicando-processamento-linguagem-natural-analise-sentimentos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "unidecode>=1.4.0",
    "wordcloud>=1.9.6",
]
